Adjusted some minor contrast issues on the blog feed

--- a/assets/scss/modules/_post.scss
+++ b/assets/scss/modules/_post.scss
@@ -86,7 +86,7 @@
 			}
 		}
 		ul {
-			background-color: $blue;
+			background-color: $secondary_color;
 			padding: 1em;
 			color: $white;
 			margin-bottom: 1.25em;
